fix background on mobile

--- a/recipes/style.css
+++ b/recipes/style.css
@@ -20,6 +20,7 @@
 
 body {
     font-family: super, Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #060623;
     background: linear-gradient(135deg, #060623 0%, #061f28 100%);
     min-height: 100vh;
     padding: 40px 20px;
